[project]
name = "mysql-release-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristian Koehntopp", email = "kris-git@koehntopp.de" }
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "click>=8.2.1",
    "mysqlclient>=2.2.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
mysql-release-notes = "mysql_release_notes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
